--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+@import 'pagedone-ui/dist/pagedone-ui.css';
+
+body {
+  font-family: 'Inter', sans-serif;
+}
